# breakhis_fine_tuning

./: .gitignore  README.md  breakhis_vit_hf_tf.ipynb  evaluate.py  evaluate_models.ipynb  evaluate_models_only.ipynb  evaluate_models_with_predefined_folds.ipynb  evaluate_models_with_predefined_folds_pt copy.ipynb  evaluate_models_with_predefined_folds_pt.ipynb  evaluate_models_with_predefined_folds_tf.ipynb  prepare_data_and_define_folds.ipynb  pyproject.toml  requirements.txt  run.py  run_evaluation_pt.py  run_fold.py  run_folds_tf.py  run_training_pt.py  train_models_only.ipynb  train_models_with_predefined_folds.ipynb  train_models_with_predefined_folds_universal.ipynb  train_models_with_predefined_folds_vit_only_tf.ipynb
scripts/common/: prepare_data_and_define_folds.ipynb  prepare_model.ipynb  prepare_model_moj.ipynb  run_data_preparation.py  thresholding_research.ipynb
scripts/tf/: run_folds.py
scripts/torch/: run_evaluation.py  run_training.py  run_verification.py
