[project]
name = "BreakHis-fine-tuning"
version = "0.1.0"
authors = ["Mikolaj Kaczmarek <m.kaczmarek9@gmail.com>"]
description = "A project for fine-tuning on BreakHis dataset."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.11"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-1.12.0%2Bcu121-cp311-cp311-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.13.0%2Bcu121-cp311-cp311-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-0.12.0%2Bcu121-cp311-cp311-win_amd64.whl" }
transformers = "^4.0.0"
datasets = "^1.0.0"
scikit-learn = "^1.0.0"
matplotlib = "^3.0.0"
opencv-python = "^4.0.0"
tensorboard = "^2.0.0"
tensorboardX = "^2.0"
seaborn = "^0.11.0"
pandas = "^1.2.0"
numpy = "^1.20.0"
